Added invitation CRUD (#128)
Accessible at POST /trips/:id/invites and POST /trip-invites/:code/join
